[project]
name = "marketplace"
version = "0.1.0"
description = "Selling Flowers"
authors = [
    {name = "jeangoujan",email = "damir.zhanguzhanov@list.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "attrs (>=25.1.0,<26.0.0)",
    "jinja2 (>=3.1.5,<4.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "jwt (>=1.3.1,<2.0.0)",
    "jose (>=1.0.0,<2.0.0)",
    "python-jose (>=3.3.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
